--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "stripe": "^16.9.0",
+    "stripe-api": "^0.1.2"
   }
 }
